publishing awesome pages 1628434303809

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
   <section class="container">
     <div class="half-width"> 
-       <h1> Welcome to <span class="fav-color"> Hamza Dev's </span> Hell </h1>
+       <h1> Welcome to <span class="purple-color"> Hamza Dev's </span> Hell </h1>
        <h3> The ultimate champion of all the evils! </h3>
        <p> You will find nothing interesting here, so stop fucking around on my webpage! Go to Hell instead!😒</p> 
        <a class="primary-btn" href="www.facebook.com/hamza.tariq.12935"> My profile </a>
@@ -27,5 +27,16 @@
       <a class="primary-btn" href="#"> Email hmmmza78@gmail.com </a>
     </div>
   </section>
-  </body> 
+  <section class="container experiences"> 
+  <h2> Experience </h2>
+  <div class="experience-item"> 
+   <h3> Full stack programmer </h3>
+   <p class="purple-color"> Started to learn in June 2021, and became successful by August 2021 </p>
+   <p> Bella Ciao 😀 </p>
+  </div>
+  </section>
+  </body>
+  <footer>  
+   <p> For more info, contact me; hmmmza78@gmail.com </p>
+  </footer> 
 </html>
